--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,11 @@ classifiers = [
 dependencies = [
     "aiofiles>=24.1.0",
     "click>=8.1.8",
+    "duckdb>=1.2.2",
     "lancedb>=0.21.2",
     "loguru>=0.7.3",
     "numpy>=2.0.2",
+    "pandas>=2.2.3",
     "pydantic>=2.11.2",
     "rich>=14.0.0",
     "tqdm>=4.67.1",
