--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "click>=8.1.8",
     "docling-haystack>=0.1.1",
     "duckdb>=1.2.2",
+    "lancedb-haystack>=0.1.1",
     "lancedb>=0.21.2",
     "loguru>=0.7.3",
     "milvus-haystack>=0.0.15",
@@ -31,6 +32,7 @@ dependencies = [
     "rich>=14.0.0",
     "sentence-transformers>=4.0.2",
     "tqdm>=4.67.1",
+    "transformers>=4.51.1",
 ]
 
 [project.urls]
