--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "sentence-transformers>=4.0.2",
     "tqdm>=4.67.1",
     "transformers>=4.51.1",
+    "google-genai>=1.10.0",
 ]
 
 [project.urls]
