--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "tqdm>=4.67.1",
     "transformers>=4.51.1",
     "google-genai>=1.10.0",
+    "pydantic-settings>=2.8.1",
 ]
 
 [project.urls]
