--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ dependencies = [
     "transformers>=4.51.1",
     "google-genai>=1.10.0",
     "pydantic-settings>=2.8.1",
+    "prefect[dask]>=3.3.4",
+    "uvicorn>=0.34.1",
 ]
 
 [project.urls]
