--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,6 @@ dependencies = [
     "click>=8.1.8",
     "docling-haystack>=0.1.1",
     "duckdb>=1.2.2",
-    "lancedb-haystack>=0.1.1",
     "lancedb>=0.21.2",
     "loguru>=0.7.3",
     "milvus-haystack>=0.0.15",
@@ -37,6 +36,9 @@ dependencies = [
     "pydantic-settings>=2.8.1",
     "prefect[dask]>=3.3.4",
     "uvicorn>=0.34.1",
+    "fastapi[standard]>=0.115.12",
+    "google-generativeai>=0.8.4",
+    "streamlit>=1.44.1",
 ]
 
 [project.urls]
