--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ dependencies = [
     "fastapi[standard]>=0.115.12",
     "google-generativeai>=0.8.4",
     "streamlit>=1.44.1",
+    "datasets>=3.5.0",
+    "einops>=0.8.1",
 ]
 
 [project.urls]
